added to gitignore

--- a/package.json
+++ b/package.json
@@ -34,5 +34,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "## USER STORY",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Fabscg/group-3-project.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Fabscg/group-3-project/issues"
+  },
+  "homepage": "https://github.com/Fabscg/group-3-project#readme"
 }
