--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "googlebooks-app",
+  "name": "group-3-project",
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:arslan-razi/ar-book-search-engine"
+    "url": "git@github.com:Fabscg/group-3-project"
   },
   "keywords": [],
   "author": "",
