--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.9",
+    "axios": "^0.26.1",
     "bootstrap": "^4.4.1",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
@@ -17,7 +18,9 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
