--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^4.0.0",
     "apollo-boost": "^0.4.9",
+    "apollo-server-core": "^3.6.6",
     "apollo-server-express": "^2.15.0",
     "browserslist": "^4.20.2",
     "graphql": "^14.7.0",
