--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "charity-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "group-3-project",
+  "version": "1.0.0",
+  "description": "",
   "main": "server/server.js",
   "scripts": {
-    "start:prod": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start": "cd server && npm start",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "heroku-postbuild": "cd client && npm run build"
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-server-core": "^3.6.6",
+    "apollo-server-express": "^2.15.0",
+    "browserslist": "^4.20.2",
+    "graphql": "^14.7.0",
+    "if-env": "^1.0.4",
+    "react-apollo": "^3.1.5"
+  },
   "devDependencies": {
     "concurrently": "^5.2.0"
   }
