--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.6.5",
-    "axios": "^0.26.1",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
-    "graphql": "^16.3.0",
+    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "stripe": "^8.212.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
