--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^5.2.0"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0"
+    "@apollo/react-hooks": "^4.0.0",
+    "dotenv": "^16.0.0"
   }
 }
